Fix disappearing headers on small screens

--- a/less/spellbook.less
+++ b/less/spellbook.less
@@ -46,12 +46,12 @@ body {
   #spell-wrapper {
     margin-left: 0px;
     margin-right: 0px;
+    padding-top: 60px;
   }
 
   .spell-level {
     margin-left: @column-margin;
     margin-right: @column-margin;
-    padding-top: 60px;
     width: @column-width;
   }
 }
@@ -60,6 +60,7 @@ body {
   color: @offblack;
   vertical-align: top;
   display: inline-block;
+  padding-top: 40px;
 
   ol {
     padding: 0;
